<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:id="@id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
    <FrameLayout
        android:id="@id/overlay_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/preview"
        android:layout_alignTop="@id/preview"
        android:layout_alignRight="@id/preview"
        android:layout_alignBottom="@id/preview">
        <ImageView
            android:id="@id/overlay"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop" />
    </FrameLayout>
    <ImageButton
        android:id="@id/take_photo"
        android:background="@drawable/shutter_photo_selector"
        android:padding="0.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:onClick="clickedTakePhoto"
        android:contentDescription="@string/take_photo" />
    <include
        layout="@layout/seekbars" />
    <ImageButton
        android:id="@id/gallery"
        android:background="@drawable/gallery_bg"
        android:padding="@dimen/button_gallery_padding"
        android:layout_width="@dimen/button_gallery_size"
        android:layout_height="@dimen/button_gallery_size"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:onClick="clickedGallery"
        android:contentDescription="@string/gallery"
        style="?android:attr/borderlessButtonStyle" />
    <TextView
        android:textSize="@dimen/queue_count"
        android:textStyle="bold"
        android:textColor="@color/main_white"
        android:gravity="center"
        android:id="@id/queue_count"
        android:paddingBottom="@dimen/queue_count_padding_bottom"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:layout_alignLeft="@id/gallery"
        android:layout_alignTop="@id/gallery"
        android:layout_alignRight="@id/gallery"
        android:layout_alignBottom="@id/gallery" />
    <ImageButton
        android:id="@id/switch_video"
        android:background="@null"
        android:padding="0.0dip"
        android:layout_width="@dimen/button_gallery_size"
        android:layout_height="@dimen/button_gallery_size"
        android:src="@drawable/main_videocam"
        android:scaleType="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="clickedSwitchVideo"
        android:contentDescription="@string/switch_to_video"
        style="?android:attr/borderlessButtonStyle" />
    <include
        layout="@layout/ctrl_panel" />
    <ImageButton
        android:id="@id/pause_video"
        android:background="@null"
        android:padding="0.0px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pause_selector"
        android:scaleType="fitCenter"
        android:onClick="clickedPauseVideo"
        android:contentDescription="@string/pause_video" />
    <ImageButton
        android:id="@id/trash"
        android:padding="10.0dip"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_delete"
        android:scaleType="fitCenter"
        android:onClick="clickedTrash"
        android:contentDescription="@string/trash"
        style="?android:attr/borderlessButtonStyle" />
    <ImageButton
        android:id="@id/share"
        android:padding="10.0dip"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_share"
        android:scaleType="fitCenter"
        android:onClick="clickedShare"
        android:contentDescription="@string/share"
        style="?android:attr/borderlessButtonStyle" />
    <FrameLayout
        android:id="@id/locker"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <ScrollView
        android:id="@id/popup_container"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ScrollView
        android:id="@id/hide_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <FrameLayout
        android:id="@id/front_flash"
        android:background="@android:color/white"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <FrameLayout
        android:id="@id/prefs_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true" />
</RelativeLayout>